@@ -1,3 +1,7 @@
+2006-06-03  Raif S. Naffah  <raif@swiftdsl.com.au>
+
+	* gnu/testlet/gnu/javax/crypto/jce/TestOfPR27853.java: New test.
+
 2006-06-02  Gary Benson  <gbenson@redhat.com>
 
 	* gnu/testlet/java/awt/Robot/security.java: Comment fixes.
